<resources>
    <string name="app_name">P-Test</string>
    <string name="start_test">Start test</string>
    <string name="landing_rationale">On a basic level, the personality of all humans falls into two categories:\nextroverts and introverts.\nAnswer a few quick questions to determine your category.</string>
    <string name="start_title">Introvert or Extrovert?</string>
    <string name="title_quiz">Test</string>
    <string name="label_true">True</string>
    <string name="label_false">False</string>
    <string name="title_results">Results</string>
    <string name="go_back">Go Back</string>
    <string name="result_template">You are:</string>
    <string name="confirm">Confirm answer</string>
    <string name="label_no">No</string>
    <string name="label_yes">Yes</string>
    <string name="label_retry">Retry</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_history">Test History</string>
    <string name="you_are">You are</string>
    <string name="unable_to_load_questions">Unable to load questions</string>
    <string name="unable_to_load_assessment">Unable to load assessment</string>
    <string name="unable_to_connect">Unable to connect to the internet</string>
</resources>