<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorPrimaryVariant"
    android:padding="@dimen/size28">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:scaleType="fitCenter"
        android:src="@drawable/landing_image"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/headline" />

    <TextView
        android:id="@+id/headline"
        style="@style/TextWhite"
        android:layout_marginBottom="@dimen/size10"
        android:fontFamily="@font/medium"
        android:text="@string/start_title"
        android:textSize="@dimen/text22"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/rationale_text" />

    <TextView
        android:id="@+id/rationale_text"
        style="@style/TextLight"
        android:text="@string/landing_rationale"
        android:textSize="@dimen/text14"
        android:layout_marginBottom="@dimen/size10"
        app:layout_constraintBottom_toTopOf="@+id/button_start"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/button_start"
        style="@style/ButtonPri"
        android:layout_width="match_parent"
        android:text="@string/start_test"
        android:textSize="@dimen/text16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>