<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorPrimaryVariant">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/close_button"
        android:layout_width="@dimen/_28sdp"
        android:layout_height="@dimen/_28sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="?selectableItemBackgroundBorderless"
        android:padding="@dimen/_4sdp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_close"
        app:tint="@color/white" />

    <TextView
        style="@style/TextWhite"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:fontFamily="@font/medium"
        android:text="@string/title_results"
        android:textSize="@dimen/text18"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/label_you"
        style="@style/TextWhite"
        android:layout_width="0dp"
        android:layout_marginStart="@dimen/_32sdp"
        android:layout_marginTop="@dimen/_32sdp"
        android:layout_marginEnd="@dimen/_32sdp"
        android:layout_marginBottom="@dimen/size32"
        android:width="@dimen/_240sdp"
        android:minLines="1"
        android:text="@string/you_are"
        android:textSize="@dimen/text16"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/close_button" />

    <TextView
        android:id="@+id/text_question"
        style="@style/TextWhite"
        android:layout_width="0dp"
        android:layout_marginStart="@dimen/_32sdp"
        android:layout_marginTop="@dimen/_32sdp"
        android:layout_marginEnd="@dimen/_32sdp"
        android:layout_marginBottom="@dimen/size32"
        android:width="@dimen/_240sdp"
        android:fontFamily="@font/medium"
        android:minLines="7"
        android:text="@string/app_name"
        android:textSize="@dimen/text20"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_you" />

    <TextView
        android:id="@+id/label_history"
        style="@style/TextWhite"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_32sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:fontFamily="@font/medium"
        android:text="@string/label_history"
        android:textSize="@dimen/text14"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_question" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/_32sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_32sdp"
        android:layout_marginBottom="@dimen/_16sdp"
        android:background="@drawable/button_white"
        app:layout_constraintBottom_toTopOf="@id/button_close"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_history"
        tools:itemCount="4"
        tools:listitem="@layout/item_history" />

    <TextView
        android:id="@+id/button_close"
        style="@style/ButtonSec"
        android:layout_width="@dimen/_180sdp"
        android:layout_marginTop="@dimen/_32sdp"
        android:layout_marginBottom="@dimen/_16sdp"
        android:text="@string/go_back"
        android:textSize="@dimen/text16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <nl.dionsegijn.konfetti.xml.KonfettiView
        android:id="@+id/konfetti"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>